[package]
name = "ripple"
version = "0.2.1"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
license = "MIT"
keywords = ["dsp"]
categories = ["science"]
build = "build.rs"
publish = ["crates-io"]
readme = "README.md"
description = "General-purpose DSP data structures and algorithms"

[dependencies]
nalgebra = { version = "0.29.0", features = ["serde-serialize", "sparse"] }
simba="0.6.0"
num-traits = "0.2.14"
serde = { version="1.0.111", features=["derive"] }
bayes = { path = "../bayes"}

[features]
mkl=[]
ipp=[]
