[package]
name = "ripple"
version = "0.2.1"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
license = "MIT"
keywords = ["dsp"]
categories = ["science"]
build = "build.rs"
publish = ["crates-io"]
readme = "README.md"
description = "General-purpose DSP data structures and algorithms"

[lib]
name = "ripple"
crate-type = ["rlib", "cdylib"]

[dependencies]
nalgebra = { version = "0.31.0", features = ["serde-serialize", "sparse"] }
simba="0.7.1"
num-traits = "0.2.14"
serde = { version = "1.0.111", features=["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rustdct = "0.7.0"
rustfft = "6.0.1"

[features]
mkl=[]
ipp=[]
